--- a/public/stylesheets/impress-demo.css
+++ b/public/stylesheets/impress-demo.css
@@ -86,12 +86,6 @@ body {
     min-height: 740px;
     
     background: #f00;
-    /*background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(240, 240, 240)), to(rgb(190, 190, 190)));*/
-    /*background: -webkit-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));*/
-    /*background:    -moz-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));*/
-    /*background:     -ms-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));*/
-    /*background:      -o-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));*/
-    /*background:         radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));*/
 }
 
 /*
@@ -176,7 +170,6 @@ a:focus {
     box-sizing:         border-box;
 
     font-family: 'PT Serif', georgia, serif;
-    font-size: 48px;
     line-height: 1.5;
 }
 
@@ -213,18 +206,17 @@ a:focus {
     height: 700px;
     padding: 40px 60px;
 
-    background-color: white;
-    border: 1px solid rgba(0, 0, 0, .3);
-    border-radius: 10px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
+    background-color: transparent;
 
-    color: rgb(102, 102, 102);
-    text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
+    color: rgb(0, 0, 0);
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 1);
 
     font-family: 'Open Sans', Arial, sans-serif;
-    font-size: 30px;
-    line-height: 36px;
     letter-spacing: -1px;
+
+    font-size: 75px;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .slide q {
