--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -1,10 +1,3 @@
-.news_item{
-    background-color: #000 ;
-}
-.news_item .title{
-    background-color: #fff;
-}
-
 body{
     background-color: #7fffd4;
     -webkit-transition-property: background-color;
@@ -17,19 +10,6 @@ body{
 }
 
 .step {
-    position: relative;
-    width: 900px;
-    padding: 40px;
-    margin: 20px auto;
-
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing:    border-box;
-    -ms-box-sizing:     border-box;
-    -o-box-sizing:      border-box;
-    box-sizing:         border-box;
-
-    font-family: 'PT Serif', georgia, serif;
-    line-height: 1.5;
     opacity: 0.1;
     -webkit-transition-property: opacity;
     -webkit-transition-duration: 0.5s;
@@ -37,70 +17,15 @@ body{
 
 .slide {
     display: block;
-
-    width: 900px;
+    width: 1200px;
     height: 700px;
     padding: 40px 60px;
-
-    background-color: transparent;
-
-    color: rgb(0, 0, 0);
-    text-shadow: 0 2px 2px rgba(0, 0, 0, 1);
-
-    font-family: 'Open Sans', Arial, sans-serif;
-    letter-spacing: -1px;
-
+    line-height: 1.5;
     font-size: 75px;
     text-align: center;
-    vertical-align: middle;
+    font-family: 'Vollkorn', serif;
+    text-shadow: 0 2px 5px rgba(0, 0, 0, 1);
+    letter-spacing: -1px;
 }
-
-
 
 .impress-enabled .step.active { opacity: 1 }
-
-/*
-    ... and we want 'positioning` word to move up a bit when the step gets
-    `present` class ...
-*/
-#ing.present .positioning {
-    -webkit-transform: translateY(-10px);
-    -moz-transform:    translateY(-10px);
-    -ms-transform:     translateY(-10px);
-    -o-transform:      translateY(-10px);
-    transform:         translateY(-10px);
-}
-
-/*
-    ... 'rotating' to rotate quater of a second later ...
-*/
-#ing.present .rotating {
-    -webkit-transform: rotate(-10deg);
-    -moz-transform:    rotate(-10deg);
-    -ms-transform:     rotate(-10deg);
-    -o-transform:      rotate(-10deg);
-    transform:         rotate(-10deg);
-
-    -webkit-transition-delay: 0.25s;
-    -moz-transition-delay:    0.25s;
-    -ms-transition-delay:     0.25s;
-    -o-transition-delay:      0.25s;
-    transition-delay:         0.25s;
-}
-
-/*
-    ... and 'scaling' to scale down after another quater of a second.
-*/
-#ing.present .scaling {
-    -webkit-transform: scale(0.7);
-    -moz-transform:    scale(0.7);
-    -ms-transform:     scale(0.7);
-    -o-transform:      scale(0.7);
-    transform:         scale(0.7);
-
-    -webkit-transition-delay: 0.5s;
-    -moz-transition-delay:    0.5s;
-    -ms-transition-delay:     0.5s;
-    -o-transition-delay:      0.5s;
-    transition-delay:         0.5s;
-}
