[Akshay,Yahya] Display name of author along with title and source. Added two more feed sources.

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -9,6 +9,11 @@ body{
     text-shadow: none;
 }
 
+.author{
+    font-size: 50px;
+    text-shadow: none;
+}
+
 .step {
     opacity: 0.1;
     -webkit-transition-property: opacity;
