--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -14,6 +14,12 @@ body{
     text-shadow: none;
 }
 
+.date{
+    font-size: medium;
+    text-shadow: none;
+}
+
+
 .step {
     opacity: 0.1;
     -webkit-transition-property: opacity;
