[Akshay/Sonia] : Filtered images using fastimage

--- a/public/stylesheets/dashboard.scss
+++ b/public/stylesheets/dashboard.scss
@@ -57,9 +57,9 @@ body{
     letter-spacing: -1px;
 }
 
-.image{
-    min-height: 20%;
-    max-height: 50%;
+.image img{
+    max-height: 300px;
+    max-width: 500px;
 }
 
 .impress-enabled .step.active { opacity: 1 }
