--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -22,10 +22,11 @@ body {
   font-size: 0.3em
 }
 
-.author-container {
+.footer {
   position: absolute;
   width: 81%;
   top:88%;
+  font-weight: bold;
 }
 
 .author {
@@ -55,6 +56,8 @@ body {
 
 .step {
   opacity: 0;
+  -webkit-transition-duration: 1s;
+  -webkit-transition-property: opacity;
 }
 
 .image img{
