[Yahya] - Positioning the title according to presence of image and/or summary

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -3,12 +3,12 @@ body {
 }
 
 
-.title-with-image{
+.title-with-content{
     width: 95%;
     line-height: 100%;
 }
 
-.title-no-image{
+.title-without-content{
     position: relative;
     margin-top: 8%;
     line-height:140%;
