--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -91,6 +91,15 @@ body {
 
 }
 
+.webpage-preview{
+    height: 300px;
+    overflow: hidden;
+}
+
+.webpage-preview img{
+    width: 600px;
+    margin-top: -200px;
+}
 
 .impress-enabled .step.active {
   opacity: 1; }
