--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -57,6 +57,7 @@ body {
     font-size: 30px;
     padding-top: 3%;
     word-wrap: break-word;
+    text-align: left
 }
 
 .author-name {
@@ -82,6 +83,7 @@ body {
     max-width: 700px;
     float:left;
     padding-top: 3%;
+    padding-right: 10px;
 }
 
 .image-without-summary img{
