--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -155,6 +155,25 @@ body {
     z-index: 20;
 }
 
+.about-slide
+{
+    position: relative;
+    width: 1200px;
+    height:720px;
+    padding: 50px;
+    margin: 0 auto;
+    background-image: url('../images/slide_image.jpeg');
+    -webkit-box-shadow: inset 0 0 120px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: inset 0 0 120px rgba(0, 0, 0, 0.4);
+    box-shadow: inset 0 0 120px rgba(0, 0, 0, 0.4);
+    text-align: justify;
+    font-family: 'Sanchez', serif;
+    text-shadow: 0 2px 5px rgba(10, 10, 10, 0.5);
+    line-height: 1.5;
+    font-size: 20px;
+    z-index: 20;
+}
+
 
 .slide::before {
     content: "";
