(Akshay/Ashwin) Adding Contact Us and FAQ links to home page

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -14,8 +14,10 @@
                 <a class="brand" href="/">Kaleidoscopez</a>
                 <ul class="nav">
                     <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/about">About</a></li>
+                    <li><a href="/faq">FAQ</a></li>
+                    <li><a href="/about">About Kaleidoscopez</a></li>
                     <li><a href="/about_us">About Us</a></li>
+                    <li><a href="/contact_us">Contact Us</a></li>
                 </ul>
             </div>
           </div>
