--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -3,6 +3,7 @@
     <head>
         <title>Kaleidoscopez</title>
         <link href="/stylesheets/lib/bootstrap.min.css" rel="stylesheet"/>
+        <link type="text/css" rel="stylesheet" media="screen" href="stylesheets/dashboard.css">
         <link href="/stylesheets/home.css" rel="stylesheet"/>
         <script src="/javascripts/lib/jquery.min.js"></script>
         <script src="/javascripts/lib/bootstrap.min.js"></script>
@@ -22,28 +23,30 @@
             </div>
           </div>
         </div>
-        <div style="margin: 60px auto;" class="main-container row">
-            <p class="awesome-person">Welcome Awesome Person</p>
-            <p class="select-channel">Get ready for radiation of information in the awesomest fashion possible.</p>
-            <div class="row-fluid">
-                <div class="channel-container span5">
-                    <fieldset>
-                        <legend>Select Channel</legend>
-                        <% @channels.each do |channel| %>
-                            <a class="btn channel" href="/<%= channel.name %>"><%= channel.name %></a>
-                        <% end %>
-                    </fieldset>
-                </div>
-                <div class="or span2">OR</div>
-                <div class="new-channel span5">
-                    <fieldset>
-                        <legend>Create Channel</legend>
-                        <p>Just Provide a Channel Name to get started</p>
-                        <form action="/channel/new" method="post">
-                            Name: <input type="text" name="name" required />
-                            <input type="submit" class="btn" value="Submit">
-                        </form>
-                    </fieldset>
+        <div class="about-slide">
+            <div class="main-container row">
+                <p class="awesome-person">Welcome Awesome Person</p>
+                <p class="select-channel">Get ready for radiation of information in the awesomest fashion possible.</p>
+                <div class="row-fluid">
+                    <div class="channel-container span5">
+                        <fieldset>
+                            <legend>Select Channel</legend>
+                            <% @channels.each do |channel| %>
+                                <a class="btn channel" href="/<%= channel.name %>"><%= channel.name %></a>
+                            <% end %>
+                        </fieldset>
+                    </div>
+                    <div class="or span2">OR</div>
+                    <div class="new-channel span5">
+                        <fieldset>
+                            <legend>Create Channel</legend>
+                            <p>Just Provide a Channel Name to get started</p>
+                            <form action="/channel/new" method="post">
+                                Name: <input type="text" name="name" required />
+                                <input type="submit" class="btn" value="Submit">
+                            </form>
+                        </fieldset>
+                    </div>
                 </div>
             </div>
         </div>
