--- a/app/views/source/_flickr.erb
+++ b/app/views/source/_flickr.erb
@@ -1,9 +1,10 @@
-<h2>Flickr</h2>
+<div class="tab-pane fade" id="flickr">
+  <form action="/source/flickr/create" method="post" accept-charset="utf-8">
+    <input type="text" name="tags" id="tags" placeholder="tag" />
+    <input type="submit" name="submit" id="submit" value="Create" />
+  </form>
 
-<% Flickr.all.to_a.each do |t| %>
-  <%= t.tags %><br/>
-<% end %>
-<form action="/source/flickr/create" method="post" accept-charset="utf-8">
-  <input type="text" name="tags" id="tags" placeholder="tag" />
-  <input type="submit" name="submit" id="submit" value="Create" />
-</form>
+  <% Flickr.all.to_a.each do |t| %>
+    <%= t.tags %><br/>
+  <% end %>
+</div>
