--- a/app/views/source/_twitter_source.erb
+++ b/app/views/source/_twitter_source.erb
@@ -1,8 +1,10 @@
-<h2>Twitter</h2>
-<% TwitterSource.all.to_a.each do |t| %>
-  <%= t.query %><br/>
-<% end %>
-<form action="/source/twitter/create" method="post" accept-charset="utf-8">
-  <input type="text" name="query" id="query" placeholder="#hashtag" />
-  <input type="submit" name="submit" id="submit" value="Create" />
-</form>
+<div class="tab-pane fade in active" id="twitter">
+  <form action="/source/twitter/create" method="post" accept-charset="utf-8">
+    <input type="text" name="query" id="query" placeholder="#hashtag" />
+    <input type="submit" name="submit" id="submit" value="Create" />
+  </form>
+
+  <% TwitterSource.all.to_a.each do |t| %>
+    <%= t.query %><br/>
+  <% end %>
+</div>
