--- a/app/views/source/new.erb
+++ b/app/views/source/new.erb
@@ -1,3 +1,34 @@
-<% Source.types.each do |type| %>
-  <%= erb :"source/_#{type.name.underscore}" %>
-<% end %>
+<html>
+  <head>
+    <title>Kaleidoscopez: Add new source</title>
+    <script type="text/javascript" src="/javascripts/lib/jquery.min.js"></script>
+    <script type="text/javascript" src="/javascripts/lib/bootstrap.min.js"></script>
+
+    <link href="/stylesheets/lib/bootstrap.min.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="hero-unit">
+        <h1>Kaleidoscopez</h1>
+        <h2>New Source</h2>
+      </div>
+      <ul class="nav nav-tabs" id="source_tabs">
+        <li class="active"><a href="#twitter">Twitter</a></li>
+        <li><a href="#flickr">Flickr</a></li>
+        <li><a href="#feed">RSS/Atom Feed</a></li>
+      </ul>
+      <div class="tab-content">
+        <% Source.types.each do |type| %>
+          <%= erb :"source/_#{type.name.underscore}" %>
+        <% end %>
+      </div>
+
+      <script type="text/javascript" charset="utf-8">
+        $('#source_tabs a').click(function(e){
+          e.preventDefault();
+          $(this).tab('show');
+        });
+      </script>
+    </div>
+  </body>
+</html>
