--- a/app/views/source/_twitter_source.erb
+++ b/app/views/source/_twitter_source.erb
@@ -1,5 +1,5 @@
 <div class="tab-pane fade in active" id="twitter">
-  <form action="/source/twitter/create" method="post" accept-charset="utf-8">
+  <form action="/source/twitter/create" method="post" accept-charset="utf-8" class="form-inline">
     <input type="text" name="query" id="query" placeholder="#hashtag" />
     <input type="submit" name="submit" id="submit" value="Create" />
   </form>
