Prettier RSS/Atom feed list in new source

--- a/app/views/source/_feed.erb
+++ b/app/views/source/_feed.erb
@@ -1,3 +1,9 @@
+<style type="text/css">
+  img.feed-image {
+    width: 64px;
+    height: auto;
+  }
+</style>
 <div class="tab-pane fade" id="feed">
   <form action="/source/feed/create" method="post" accept-charset="utf-8" class="form-inline">
     <input type="text" name="name" id="name" placeholder="name" />
@@ -7,11 +13,20 @@
     <input type="submit" name="submit" id="submit" value="Create" />
   </form>
 
-  <% Feed.all.to_a.each do |t| %>
-    <%= t.name %>
-    <%= t.url %>
-    <%= t.image_url %>
-    <%= t.has_summary %>
-    <br/>
-  <% end %>
+  <div class="media-list">
+    <% Feed.all.to_a.each_with_index do |feed, index| %>
+      <div class="media">
+        <a href="#" class="pull-left">
+          <img alt="Image for <%= feed.name %>" class="media-object feed-image" src="<%= feed.image_url %>" />
+        </a>
+        <div class="media-body">
+          <h4 class="media-heading">
+            <a href="<%= feed.url %>"><%= feed.name %></a>
+          </h4>
+          <p>Show Summary: <%= feed.has_summary %></p>
+        </div>
+      </div>
+      <br/>
+    <% end %>
+  </div>
 </div>
